--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.x"
   },
   "scripts": {
-    "start": "tsx dist/server.js",
+    "start": "node dist/server.js",
     "start:dev": "tsx watch src/server.ts",
     "start:command": "tsx watch commands/ping.ts",
     "build": "tsup src"
