--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "start:dev": "tsx watch src/server.ts",
-    "start:command": "tsx watch commands/ping.ts",
-    "build": "tsup src"
+    "start:command": "tsx watch commands/ping.ts"
   },
   "keywords": [],
   "author": "",
