--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node ./dist/server.js",
     "start:dev": "tsx watch src/server.ts",
     "start:command": "tsx watch commands/ping.ts"
   },
